admin panel changes

--- a/Admin/CurrentMovies.html
+++ b/Admin/CurrentMovies.html
@@ -18,7 +18,7 @@
             <div class="logo-name">FMFPT</div>
         </a>
         <ul class="side-menu">
-            <li class="active"><a href="./Admin.Html"><i class='bx bxs-dashboard'></i>Upcomming Movies</a></li>
+            <li class="active"><a href="./Admin.Html"><i class='bx bxs-dashboard'></i>Relised Movies</a></li>
             <li onclick="displayCurrent()"><a href="#"><i class='bx bx-store-alt'></i>Current Added Movies</a></li>
             <li  onclick="displayAddMovie()"><a href="#"><i class='bx bx-analyse'></i>Add Movie</a></li>
         </ul>
@@ -60,10 +60,10 @@
                     <h1>Dashboard</h1>
                     <ul class="breadcrumb">
                         <li><a href="#">
-                                Upcomming Movies
+                                Relised Movies
                             </a></li>
                         /
-                        <li><a href="#" class="active"> Upcomming Movies</a></li>
+                        <li><a href="#" class="active"> Relised Movies</a></li>
                     </ul>
                 </div>
                 
